
        CHANGES IN spatstat.explore VERSION 3.1-0.009

OVERVIEW

    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.

    o Inline arithmetic for function tables ('fv') and arrays ('fasp')
    
    o Bug fixes in calculation of standard errors.

NEW FUNCTIONS

    o Math.fv, Complex.fv, Summary.fv, Ops.fv
    Methods for arithmetic operations for function tables (class 'fv')
    
    o Math.fasp, Complex.fasp, Summary.fasp, Ops.fasp
    Methods for arithmetic operations for function arrays (class 'fasp')
    
SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp
    Standard error calculation is now available with any smoothing kernel.

    o density.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.
    
    o relrisk.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.

    o relrisk.ppp
    New argument 'fudge' specifies a constant numeric value that will be
    added to each estimate of point process intensity before calculation of
    relative risk.
    
    o bw.relrisk.ppp
    Additional arguments '...' are now passed to 'density.ppp'.

    o eval.fasp
    Automatically-generated labels have been improved.

    o relrisk.ppp
    Issues a warning if numerical underflow is detected.
    
BUG FIXES

    o density.ppp
    Calculation of standard error was slightly incorrect if edge=TRUE.
    Fixed.
    
    o relrisk.ppp
    Calculation of standard error was incorrect for non-Gaussian kernels.
    Fixed.

        CHANGES IN spatstat.explore VERSION 3.1-0

OVERVIEW

    o Pair correlation functions allow more control over smoothing parameters.
    
    o Improved support for one-dimensional smoothing kernels.

    o Bug fixes in plot.fv.

    o Internal improvements and bug fixes.

SIGNIFICANT USER-VISIBLE CHANGES

    o kernel.moment