@@ -271,7 +271,7 @@ evaluateCovariate(covariate, locations, \dots)
 evaluateCovariateAtPixels(covariate, locations, \dots, types, eps, dimyx)
 evaluateCovariateAtPoints(covariate, locations, \dots, allow.column)
 evaluate2Dkernel(kernel, x, y, sigma, varcov, \dots, scalekernel)
-ExpSmoothLog(X, \dots, at, weights)
+ExpSmoothLog(X, \dots, at, weights, se)
 exactppm(X, baseline, \dots, subset, eps, dimyx)
 extractAtomicQtests(x)
 fasp(fns, which, formulae, dataname, title, rowNames, colNames, checkfv)
