@@ -1,11 +1,13 @@
 
-        CHANGES IN spatstat.explore VERSION 3.1-0.009
+        CHANGES IN spatstat.explore VERSION 3.1-0.010
 
 OVERVIEW
 
     o Changed the calculation of standard errors in density.ppp and relrisk.ppp.
 
     o Inline arithmetic for function tables ('fv') and arrays ('fasp')
+    
+    o Standard error calculation for Smooth.ppp (experimental)
     
     o Bug fixes in calculation of standard errors.
 
@@ -34,6 +36,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
     New argument 'fudge' specifies a constant numeric value that will be
     added to each estimate of point process intensity before calculation of
     relative risk.
+    
+    o Smooth.ppp
+    Standard error calculation is now supported (Experimental).
     
     o bw.relrisk.ppp
     Additional arguments '...' are now passed to 'density.ppp'.
